# Sign-pipeline

./: .gitignore  README.md  data.dvc  dvc.yaml  enviroment.yml  pyproject.toml  requirements.txt  visualize_landmarks_processing.py
lm_processing/: landmarks.py
notebooks/: fix_asociacion.py  sentence_cutoff.ipynb  test.py
notebooks/multi_person_segmentation/: multiple_pose_test.ipynb  yolo_test.ipynb
pipeline/: 01_download.py  02_separate_audio_from_video.py  02_separate_audio_video_subtitles.py  03_parse_subtitles.py  04_generate_subs.py  05_generate_bounding_boxes.py  06_generate_landmarks.py  args.py
pipeline/landmarks/: clip_writer.py  config.py  detectors.py  person.py  processor.py
scratch/: fix_bounding_boxes.py  fix_timestamps.py  io-bound-test.py
scripts/: create_subtitles.py  download_youtube.py  get_video_links.py
src/: args.py  download_command  download_yt.py  extract_audio.py  process_download.py  process_landmarks.py  reencode.py  separate_audio_video.py  test.py
src/download/: 02_batch_download.sh  05_process_downloads_unsubtitled.py  20_batch_download.sh  30_separate_audio_video.py  41_process_downloads_subtitled.py  batch_process.sh  create_subtitles.ipynb  get_video_links.py  process_download.py  separate_audio_video.py
src/exploration/: calculate_video_hours.py
src/processing/: batch_resize_bounding_boxes.py  boundingboxgen.ipynb  generate_bounding_boxes.py  generate_face_landmarks.py  generate_landmarks.ipynb  generate_landmarks.py  generate_landmarks_profiling.py  resize_bb.py  (+3 more)
utils/: args.py  config.py  gpu_reader.py  video.py
(+20 files in other folders)
