[project]
name = "Sign_pipeline"
version = "0.1.0"
requires-python = "~=3.12.0"
dependencies = [
    "numpy",
    "pyyaml",
    "yt_dlp[default]",
    "silero-vad",
    "faster-whisper",
    "torchcodec",
    "python-dotenv",
    "ultralytics",
    "mediapipe",
    "opencv-python",
    "h5py",
    "lap>=0.5.12",
    "sortedcontainers",
    "pathos"
]